Added logic for receiving emails

--- a/index.html
+++ b/index.html
@@ -25,24 +25,17 @@
         </main>
     </div>
 </div>
-<script>// <![CDATA[
-(function () {
-    var po = document.createElement('script');
-    po.type = 'text/javascript';
-    po.async = true;
-    po.src = 'https://apis.google.com/js/client:plusone.js';
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(po, s);
-})();
-// ]]></script>
-<script src="https://apis.google.com/js/client.js?onload=handleClientLoad"></script>
+
 <script src="assets/js/lib.js"></script>
 <script src="assets/js/app.js"></script>
 <script src="assets/js/template.min.js"></script>
+<script>// <![CDATA[
+(function() {
+    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+    po.src = 'https://apis.google.com/js/client:plusone.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+})();
+// ]]></script>
+<script src="https://apis.google.com/js/client.js?onload=handleClientLoad"></script>
 </body>
 </html>
-
-<!--Client identifier-->
-<!--162151956695-43hfg93bbm91to2elra9n2qb2i80u1o0.apps.googleusercontent.com-->
-<!--Client secret-->
-<!--E5GYKjxRINNVuYrAVrkFWLWy-->
