moved sign logic and retreive emails to factory

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <header class="custom-header mdl-layout__header mdl-layout__header--waterfall">
             <div class="mdl-layout__header-row">
                 <nav class="mdl-navigation mdl-layout--large-screen-only">
-                    <a class="mdl-navigation__link" href="">Menu</a>
-                    <a class="mdl-navigation__link" href="">Angular Inbox</a>
+                    <a class="mdl-navigation__link" ui-sref="home">Menu</a>
+                    <a class="mdl-navigation__link" ui-sref="home">Angular Inbox</a>
                 </nav>
             </div>
         </header>
