Moved directives to own folder

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </nav>
             </div>
         </header>
-        <main class="mdl-layout__content">
+        <main class="mdl-layout__content" when-scroll-ends="loadMoreRecords()">
             <div class="page-content">
                 <div ui-view></div>
             </div>
